| Bug #58945 | Too much DiskPageBufferMemory can cause Job Buffer Congestion on node startup. | ||
|---|---|---|---|
| Submitted: | 15 Dec 2010 15:47 | Modified: | 6 Jan 2011 7:04 |
| Reporter: | Daniel Smythe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 7.1.6 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | crash, diskpagebuffermemory, job buffer congestion, Memory, startup | ||
[15 Dec 2010 15:47]
Daniel Smythe
[20 Dec 2010 10:35]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.21 (revid:jonas@mysql.com-20101220103324-m88t4pcn4yt3dy5n) (version source revid:jonas@mysql.com-20101220103324-m88t4pcn4yt3dy5n) (merge vers: 5.1.51-ndb-7.0.21) (pib:24)
[20 Dec 2010 10:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/127281 4068 Jonas Oreland 2010-12-20 ndb - bug#58945 - handle DiskPageBufferMemory the same as all other memory
[20 Dec 2010 10:38]
Jonas Oreland
pushed to 7.0.21 and 7.1.10
[6 Jan 2011 7:04]
Jon Stephens
Documented in the NDB-7.0.21 and 7.1.10 changelog as follows:
Data nodes configured with very large amounts (multiple
gigabytes) of DiskPageBufferMemory failed during startup with
NDB error 2334 (Job buffer congestion).
Closed.
