ndb - bug#58945 - handle DiskPageBufferMemory the same as all other memory