storage/ndb/src/kernel/blocks/record_types.hpp
@@ -58,10 +58,15 @@
 #define RG_TRANSPORTER_BUFFERS  6
 
 /**
+ * Disk page buffer
+ */
+#define RG_DISK_PAGE_BUFFER     7
+
+/**
  * 
  */
 #define RG_RESERVED             0
-#define RG_COUNT                7
+#define RG_COUNT                8
 
 /**
  * Record types
