storage/ndb/src/kernel/vm/ndbd_malloc_impl.hpp
@@ -95,7 +95,7 @@ public:
 private:
   void grow(Uint32 start, Uint32 cnt);
 
-#define XX_RL_COUNT 7
+#define XX_RL_COUNT 8
   /**
    * Return pointer to free page data on page
    */
